--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "axios": "^0.24.0",
+    "bootstrap": "^5.1.3",
     "cra-template": "1.1.2",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
