--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "axios": "^0.24.0",
     "bootstrap": "^5.1.3",
     "cra-template": "1.1.2",
+    "json-server": "^0.17.0",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -20,7 +21,9 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "lint": "eslint .",
-    "lint:fix": "eslint . --fix"
+    "lint:fix": "eslint . --fix",
+    "json": "json-server -p 3500 -w data/db.json"
+
   },
   "eslintConfig": {
     "extends": [
