--- a/package.json
+++ b/package.json
@@ -23,7 +23,6 @@
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
     "json": "json-server -p 3500 -w data/db.json"
-
   },
   "eslintConfig": {
     "extends": [
@@ -47,6 +46,7 @@
     "@babel/core": "^7.16.0",
     "@babel/eslint-parser": "^7.16.0",
     "@babel/preset-react": "^7.16.0",
+    "@testing-library/react": "^12.1.2",
     "@types/node": "^16.11.6",
     "@typescript-eslint/eslint-plugin": "^4.33.0",
     "@typescript-eslint/parser": "^4.33.0",
@@ -61,7 +61,9 @@
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react": "^7.26.1",
     "eslint-plugin-react-hooks": "^4.2.0",
+    "jest": "26.6.0",
     "prettier": "^2.4.1",
+    "react-test-renderer": "^17.0.1",
     "typescript": "^4.4.4"
   }
 }
